# beacons

./: .gitignore  Cargo.toml  PROPOSAL.md  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
firmware/: Cargo.toml
firmware/src/: lib.rs
kicad/: AP7179DSKZ20-13.kicad_sym  PN7160A1HN_C100E.kicad_sym  battmon.kicad_sym  beacons.kicad_pcb  beacons.kicad_prl  beacons.kicad_pro  beacons.kicad_sch  fp-info-cache  nfc.kicad_sch  sevensegment.kicad_sym  sym-lib-table
kicad/footprints.pretty/: 21-0168E_T822-3_MXM-L.kicad_mod  21-0168E_T822-3_MXM-M.kicad_mod  21-0168E_T822-3_MXM.kicad_mod  DisplayConnector.kicad_mod  NFC.kicad_mod  QFN50P350X350X80-21N-D.kicad_mod  QFN50P600X600X100-41N-D.kicad_mod  SC10-11EWA_KNB.kicad_mod
src/: amoled.rs  lib.rs  main.rs  net.rs
website/: beacons.html  client.js  tests.js
