[package]
name = "beacons"
version = "0.1.0"
authors = ["jack"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "beacons"
harness = false
test = false
doctest = false
bench = false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
personal = []
enterprise = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
embassy-time = { version = "0.4.0" }
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
anyhow = "1.0.95"
http = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
semver = "1.0.24"
async-io = "2.4.0"
url = "2.5.4"
dotenvy_macro = "0.15.7"
smart-leds = "0.4.0"
build-time = "0.1.3"
lcd1602-driver = { git = "https://github.com/ImTheSquid/lcd1602-driver.git" }
lightning-time = "1.0.0"
seven_segment = { git = "https://github.com/ImTheSquid/seven_segment.git" }
adv-shift-registers = "0.2.4"
ws2812-spi = "0.5.1"

[build-dependencies]
embuild = { version = "0.32.0", features = ["espidf"] }
cc = "=1.1.30"     # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
